<resources>

    <string name="app_name">Simple File Explorer</string>
    <string name="title_section1">File</string>
    <string name="title_section2">Favourite</string>
    <string name="title_section3">Classified</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_file_display">FileExplorer</string>
    <string name="empty_folder">Empty Folder</string>
    <!-- menu -->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_cut">Cut</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_new_folder">New Folder</string>
    <string name="menu_add_favourite">Add To Favourite</string>
    <string name="menu_remove_favourite">Remove From Favourite</string>
    <string name="menu_properties">Properties</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_search">Search</string>
    <string name="menu_multi_select">Multi Mode</string>
    <string name="menu_single_select">Single Mode</string>
    <string name="menu_share">Share</string>
    <!-- property -->
    <string name="name_l">Name:</string>
    <string name="location_l">Location:</string>
    <string name="items_l">Items:</string>
    <string name="size_l">Size:</string>
    <string name="last_modified_l">Last Modified:</string>
    <!-- operation -->
    <string name="deleting_file">Deleting file %s now...</string>
    <string name="preparing">Preparing...</string>
    <string name="canceled">Canceled by user!</string>
    <string name="copied_to_clipboard">The file is copied to the clipboard!</string>
    <string name="confirm">Confirm</string>
    <string name="delete_confirm">Do you really want to delete the file(s)?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="input_a_name">Input a name</string>
    <string name="new_folder">New Folder</string>
    <string name="cant_read">The current folder is not allowed to be read!</string>
    <string name="cant_write">The current folder is not allowed to be written!</string>
    <string name="duplicated_name">There is already a file named that in current folder!</string>
    <string name="folder_created">The folder has been created!</string>
    <string name="unknown_error">Unknown error occurs!</string>
    <string name="rename_success">The file name has been changed!</string>
    <string name="input_a_valid_name">A valid name should be more than 0 bytes and less than 254 bytes.</string>
    <string name="need_root">Root permission is needed to do this operation!</string>
    <string name="delete_success">The files have been deleted!</string>
    <string name="some_cant_delete">Some files can\'t be deleted without root permisson!</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="copy_done">Copy done!</string>
    <string name="copy_file">Copying %s now...</string>
    <string name="meaningless_cut">It\'s meaningless to cut the file to its original folder!</string>
    <string name="file_exist">File Conflict</string>
    <string name="merge_or_not">A folder named %s exists. Do you want to merge?</string>
    <string name="replace">Replace</string>
    <string name="replace_or_not">A %1$s named %2$s exists. Do you want to replace it? Replacement will DELETE the original %1$s.</string>
    <string name="ignore">Ignore</string>
    <string name="input_filename">Input a file name to filter.</string>
    <string name="select_at_least_one_file">Please select at least one file.</string>
    <string name="add_success">Add to favourites successfully!</string>
    <string name="already_add">The file is already added to favourites.</string>
    <string name="error">Error occurs!</string>

</resources>