<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/search"
        android:showAsAction="ifRoom"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/refresh"
        android:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_folder"
        android:icon="@drawable/new_folder"
        android:showAsAction="ifRoom"
        android:title="@string/menu_new_folder"/>
    <item
        android:id="@+id/menu_copy"
        android:icon="@drawable/copy"
        android:showAsAction="ifRoom"
        android:title="@string/menu_copy"/>
    <item
        android:id="@+id/menu_cut"
        android:icon="@drawable/cut"
        android:showAsAction="ifRoom"
        android:title="@string/menu_cut"/>
    <item
        android:id="@+id/menu_paste"
        android:icon="@drawable/paste"
        android:showAsAction="ifRoom"
        android:title="@string/menu_paste"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/delete"
        android:showAsAction="ifRoom"
        android:title="@string/menu_delete"/>
    <item
        android:id="@+id/menu_add_favourite"
        android:icon="@drawable/favourite"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add_favourite"/>
    <item
        android:id="@+id/menu_multi_select"
        android:showAsAction="never"
        android:title="@string/menu_multi_select"/>
    <item
        android:id="@+id/menu_single_select"
        android:showAsAction="never"
        android:title="@string/menu_single_select"/>

</menu>